--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,7 @@
-<IfModule mod_rewrite.c>
-Options +FollowSymLinks
-RewriteEngine On
-RewriteBase /humanrex1/
+DirectoryIndex index.php
+RewriteEngine on
+
+RewriteCond $1 !^(index\.php|(.*)\.swf|forums|images|css|downloads|jquery|js|robots\.txt|favicon\.ico)
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php/$1 [L]
-</IfModule>
+RewriteRule ^(.*)$ ./index.php?$1 [L,QSA]
